# bike-stress-model

./: .gitattributes  .gitignore  README.md  copy.sh  osm.py  project.code-workspace  pyproject.toml  render.yaml  util.py
.github/workflows/: static.yml
backend/: .gitignore  README.md  api.py  crash.py  crash_local.py  main.py  osm.py  pyproject.toml  util.py
backend/notebooks/: blocks.ipynb  crash.ipynb  duck.ipynb  four_maps.ipynb  main.ipynb  merge.ipynb  routes.ipynb  test.ipynb
backend/src/: route.py
backend/src/stressmodel/: __init__.py  classification.py  lanes.py  separation_level.py  speed.py
backend/tests/: test_util.py
deployed-charts/: chart1.html  chart2.html  index.html
frontend/: index.html  package.json  vite.config.ts
frontend/public/: cambridge_streets.geojson  everett_streets.geojson  somerville_boundary.geojson  somerville_streets.geojson
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AboutComponent.vue  CustomizationModal.vue  ExportButtons.vue  ExportMapModal.vue  MapComponent.vue  ModelComponent.vue  ModelFlowChart.vue  ModelSliders.vue  SettingsModal.vue
frontend/src/components/ExportModal/: ExportMapModal.vue
frontend/src/components/Map/: Map.vue  tooltipUtils.ts
frontend/src/data/: bikeData.ts
frontend/src/services/: bikeNetworkApi.ts
frontend/src/utils/: colorScale.ts  params.ts  scoreCalculator.ts  scoreManager.ts
notebooks/: four_maps.ipynb  main.ipynb  merge.ipynb  new.ipynb
src/stressmodel/: __init__.py  lanes.py
