[project]
name = "advgis-finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "geopandas>=1.1.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.3",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]
